### Fixed
- Small bugs and fixes for the pipeline command.


## Snapcraft
- `snap install philosopher`