@@ -51,7 +51,7 @@ changelog:
     - '^test:'
 
 nfpms:
--
+  -
   #id: "default"
 
   name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
